# packagetracker

./: .gitignore  CHANGELOG.rst  CHANGES  Makefile  README.rst  noxfile.py  pyproject.toml  setup.py  tox.ini
docs/: changelog.rst  conf.py  index.rst
packagetrack/: __init__.py  data.py  xml_dict.py
packagetrack/service/: __init__.py  fedex_interface.py  ups_interface.py  usps_interface.py
packagetrack/tests/: __init__.py  test_tracking_info.py  test_xml_dict.py
packagetracker/: __init__.py  __main__.py  data.py  exceptions.py  xml_dict.py
packagetracker/service/: __init__.py  dhl_interface.py  fedex_interface.py  ups_interface.py  usps_interface.py
tests/: data.py  test_dhl.py  test_fedex.py  test_package.py  test_tracking_info.py  test_unknown.py  test_ups.py  test_usps.py  test_xml_dict.py
